# pickaxe

./: AGENTS.md  LICENSE  README.md  pyproject.toml
examples/: add_hooks.py  ascii.py  binsh.py  custom_breakpoint.py  unipickle.py
examples/custom_unpickler/: add_hooks.py  add_pre_post_hooks.py  custom_breakpoint.py  custom_unpickler.py  trace_filter.py  trace_output_file.py
examples/custom_unpickler/pytecode/: analysis.py  chall.py
examples/custom_unpickler/sickle/: problem.py  sickle.py
examples/sickle/: problem.py
pickaxe/: __init__.py  crafter.py  pickle_opcode.py  unpickler.py
tests/: test_ascii_crafter.py  test_crafter.py  test_crafter_stack.py  test_stop_handling.py  test_unicode_crafter.py  test_unpickler.py
