[project]
name = "pickaxe"
version = "0.0.1"
authors = [
  { name="Xornet", email="einnotwendigesubel@gmail.com" },
]
description = "Pickle hand assembler"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Xornet-Euphoria/pickaxe"
Issues = "https://github.com/Xornet-Euphoria/pickaxe/issues"